--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
-In order to run the Jupyter notebooks the following Python libraries are needed:
+In order to run the Jupyter notebooks the following Python libraries/modules are needed:
 os
 pathlib
 json
 pandas
 scrapy
+rdflib
+computational power
